# homebrew-kpf

./: .gitignore  DEPLOYMENT.md  README.md  SETUP.md  init-repo.sh  pyproject.toml
.github/workflows/: manual-update.yml  update-formula.yml
Formula/: kpf.rb
scripts/: formula-updater.py  test-formula.py
