[project]
name = "homebrew-kpf-scripts"
version = "0.1.0"
description = "Scripts for maintaining homebrew-kpf"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
